--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -34,7 +34,7 @@ Chris C<BinGOs> Williams, Zefram, Ævar Arnfjörð Bjarmason, Stevan
 Little, Dave Rolsky, Max Maischein, Abigail, Jesse Luehrs, Tony Cook,
 Dominic Hargreaves, Aaron Crane, Aristotle Pagaltzis, Matthew Horsfall,
 Peter Martini, Sawyer X, Chad 'Exodist' Granum, Renee Bäcker, Eric Herman,
-John SJ Anderson, Karen Etheridge, and Zak B. Elep.
+John SJ Anderson, Karen Etheridge, Zak B. Elep, and Tom Hukins.
 
 =head2 PUMPKIN?
 
@@ -673,6 +673,7 @@ the strings?).
  Sawyer X  5.31.0       2018-May-24     The 5.31 development track
  Ether     5.31.1       2019-Jun-20
  Steve     5.31.2       2019-Jul-20
+ Tom H     5.31.3       2019-Aug-20
 
 =head2 SELECTED RELEASE SIZES
 
