--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -674,6 +674,7 @@ the strings?).
  Ether     5.31.1       2019-Jun-20
  Steve     5.31.2       2019-Jul-20
  Tom H     5.31.3       2019-Aug-20
+ Max M     5.31.4       2019-Sep-20
 
 =head2 SELECTED RELEASE SIZES
 
