Update release schedule
Aim for a fortnight's time for 5.30.1 after RC1 today
Aim for 5.30.2 RC1 in late February, releasing in early March

(cherry picked from commit 4b49b6f214c048d656b38a1c2f08e2d2b29676c5)

--- a/Porting/release_schedule.pod
+++ b/Porting/release_schedule.pod
@@ -24,8 +24,8 @@ Code freezes (which happen in the 5.31.X series)
 =head2 Perl 5.30
 
   2019-05-22  5.30.0 ✓        Sawyer X
-  2019-??-??  5.30.1          Steve Hay
-  2019-??-??  5.30.2          Steve Hay
+  2019-11-10  5.30.1          Steve Hay
+  2020-03-??  5.30.2          Steve Hay
 
 =head2 Perl 5.28
 
