--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -669,6 +669,7 @@ the strings?).
  Sawyer X  5.30.0-RC1   2019-May-11     The 5.30 maintenance track
  Sawyer X  5.30.0-RC2   2019-May-17
  Sawyer X  5.30.0       2019-May-22
+ Steve     5.30.1-RC1   2019-Oct-27
 
  Sawyer X  5.31.0       2018-May-24     The 5.31 development track
  Ether     5.31.1       2019-Jun-20
