--- a/pod/perldebguts.pod
+++ b/pod/perldebguts.pod
@@ -621,6 +621,9 @@ will be lost.
  ANYOFHr          sv 1       Like ANYOFH, but the flags field contains
                              packed bounds for all matchable UTF-8 start
                              bytes.
+ ANYOFHs          sv anyofhs Like ANYOFHb, but has a string field that
+                             gives the leading matchable UTF-8 bytes;
+                             flags field is len
  ANYOFR           packed 1   Matches any character in the range given by
                              its packed args: upper 12 bits is the max
                              delta from the base lower 20; the flags
