--- a/pod/perlhist.pod
+++ b/pod/perlhist.pod
@@ -678,6 +678,7 @@ the strings?).
  Tom H     5.31.3       2019-Aug-20
  Max M     5.31.4       2019-Sep-20
  Steve     5.31.5       2019-Oct-20
+ BinGOs    5.31.6       2019-Nov-20
 
 =head2 SELECTED RELEASE SIZES
 
