Update Porting documents to reference GitHub issues
(cherry picked from commit b4285b0dabe98fc37362ed5367ba070593c8cbbc)

--- a/Porting/perldelta_template.pod
+++ b/Porting/perldelta_template.pod
@@ -408,7 +408,7 @@ XXX Generate this with:
 =head1 Reporting Bugs
 
 If you find what you think is a bug, you might check the perl bug database
-at L<https://rt.perl.org/>.  There may also be information at
+at L<https://github.com/Perl/perl5/issues>.  There may also be information at
 L<http://www.perl.org/>, the Perl Home Page.
 
 If you believe you have an unreported bug, please run the L<perlbug> program
