Made string multiplication more clear in perlintro
Added "repeats strings" in parenthesis to make it more unambiguous.

Santtu Ojanperä is now a Perl author.

For: https://github.com/Perl/perl5/pull/17335

--- a/AUTHORS
+++ b/AUTHORS
@@ -1116,6 +1116,7 @@ Sam Tregar			<sam@tregar.com>
 Sam Vilain			<sam@vilain.net>
 Samuel Thibault			<sthibault@debian.org>
 Samuli Kärkkäinen		<skarkkai@woods.iki.fi>
+Santtu Ojanperä			<santtuojanpera98@gmail.com>
 Sawyer X			<xsawyerx@cpan.org>
 Schuyler Erle			<schuyler@oreilly.com>
 Scott A Crosby			<scrosby@cs.rice.edu>
