perldelta for 5e91ca38cafa2b006f7671e941287e05d31c2d97

--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -131,6 +131,10 @@ If there was something important to note about this change, include that here.
 
 =item *
 
+L<English> has been upgraded from version 1.10 to 1.11.
+
+=item *
+
 L<Test::Simple> has been upgraded from version 1.302169 to 1.302170.
 
 =back
