Update ExtUtils-MakeMaker to CPAN version 7.42
  [DELTA]

7.42    Tue 17 Dec 22:02:25 GMT 2019

    No changes since v7.41_01

7.41_01 Mon 16 Dec 21:36:24 GMT 2019

    Test fixes:
    - README.pod warnings are suppressed during testing
      so no need to skip when PERL_CORE is defined

    Doc fixes:
    - Update referenced modules for new distributions
    - Updated SEE ALSO section accordingly

--- a/cpan/ExtUtils-MakeMaker/lib/ExtUtils/MakeMaker/Tutorial.pod
+++ b/cpan/ExtUtils-MakeMaker/lib/ExtUtils/MakeMaker/Tutorial.pod
@@ -1,6 +1,6 @@
 package ExtUtils::MakeMaker::Tutorial;
 
-our $VERSION = '7.40';
+our $VERSION = '7.42';
 $VERSION =~ tr/_//d;
 
 
@@ -205,7 +205,8 @@ L<perlmodstyle> gives stylistic help writing a module.
 L<perlnewmod> gives more information about how to write a module.
 
 There are modules to help you through the process of writing a module:
-L<ExtUtils::ModuleMaker>, L<Module::Install>, L<PAR>
+L<ExtUtils::ModuleMaker>, L<Module::Starter>, L<Minilla::Tutorial>,
+L<Dist::Milla::Tutorial>, L<Dist::Zilla::Starter>
 
 =cut
 
