fixing usally and patern
Typos in documentation and inline comments.

Pursuant to discussion on openbsd-tech list:
https://marc.info/?t=157678644800005&r=1&w=2
https://marc.info/?t=157678570300002&r=1&w=2

For:
https://github.com/Perl/perl5/issues/17379
https://github.com/Perl/perl5/pull/17380

Committer:
Bryan Stenson is now a Perl author.
Regenerate uconfig.sh via: perl regen/uconfig_h.pl

--- a/AUTHORS
+++ b/AUTHORS
@@ -196,6 +196,7 @@ Brooks D Boyd
 Bruce Barnett			<barnett@grymoire.crd.ge.com>
 Bruce J. Keeler			<bkeelerx@iwa.dp.intel.com>
 Bruce P. Schuck			<bruce@aps.org>
+Bryan Stenson			<bryan@siliconvortex.com>
 Bud Huff			<BAHUFF@us.oracle.com>
 Byron Brummer			<byron@omix.com>
 C Aditya			<caditya@novell.com>
