--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -148,7 +148,7 @@ XXX Remove this section if not applicable.
 
 =item *
 
-L<XXX> has been upgraded from version A.xx to B.yy.
+L<Net::Ping> has been upgraded from version 2.71 to 2.72.
 
 If there was something important to note about this change, include that here.
 
