--- a/pod/perldelta.pod
+++ b/pod/perldelta.pod
@@ -2,9 +2,6 @@
 
 =head1 NAME
 
-[ this is a template for a new perldelta file.  Any text flagged as XXX needs
-to be processed before release. ]
-
 perldelta - what is new for perl v5.31.7
 
 =head1 DESCRIPTION
@@ -15,15 +12,7 @@ release.
 If you are upgrading from an earlier release such as 5.31.5, first read
 L<perl5316delta>, which describes differences between 5.31.5 and 5.31.6.
 
-=head1 Notice
-
-XXX Any important notices here
-
 =head1 Core Enhancements
-
-XXX New core language features go here.  Summarize user-visible core language
-enhancements.  Particularly prominent performance optimisations could go
-here, but most should go in the L</Performance Enhancements> section.
 
 =head2 The isa Operator
 
@@ -34,25 +23,7 @@ is an instance of a given class or a class derived from it:
 
 For more detail see L<perlop/Class Instance Operator>.
 
-[ List each enhancement as a =head2 entry ]
-
-=head1 Security
-
-XXX Any security-related notices go here.  In particular, any security
-vulnerabilities closed should be noted here rather than in the
-L</Selected Bug Fixes> section.
-
-[ List each security issue as a =head2 entry ]
-
 =head1 Incompatible Changes
-
-XXX For a release on a stable branch, this section aspires to be:
-
-    There are no changes intentionally incompatible with 5.XXX.XXX
-    If any exist, they are bugs, and we request that you submit a
-    report.  See L</Reporting Bugs> below.
-
-[ List each incompatible change as a =head2 entry ]
 
 =head2 C<\p{I<user-defined>}> properties now always override official
 Unicode ones
@@ -60,21 +31,18 @@ Unicode ones
 Previously, if and only if a user-defined property was declared prior to
 the compilation of the regular expression pattern containing it, its
 definition was used instead of any official Unicode property with the
-same name.  Now, it always overrides the offical property.  This
+same name.  Now, it always overrides the official property.  This
 change could break existing code that relied (likely unwittingly) on the
 previous behavior.  Without this fix, if Unicode released a new version
 with a new property that happens to have the same name as the one you
 had long been using, your program would break when you upgraded to a
 perl that used that new Unicode version.  See L<perlunicode/User-Defined
-Character Properties>.  [GH #17205]
+Character Properties>.  [L<GH #17205|https://github.com/Perl/perl5/issues/17205>]
+
 
 =head1 Deprecations
 
-XXX Any deprecated features, syntax, modules etc. should be listed here.
-
 =head2 Module removals
-
-XXX Remove this section if not applicable.
 
 The following modules will be removed from the core distribution in a
 future release, and will at that time need to be installed from CPAN.
@@ -92,55 +60,13 @@ not usually on concerns over their design.
 
 =over
 
-=item XXX
+=item B::Debug
 
-XXX Note that deprecated modules should be listed here even if they are listed
-as an updated module in the L</Modules and Pragmata> section.
-
-=back
-
-[ List each other deprecation as a =head2 entry ]
-
-=head1 Performance Enhancements
-
-XXX Changes which enhance performance without changing behaviour go here.
-There may well be none in a stable release.
-
-[ List each enhancement as an =item entry ]
-
-=over 4
-
-=item *
-
-XXX
+B::Debug is no longer shipped with Perl, you can still install it from CPAN.
 
 =back
 
 =head1 Modules and Pragmata
-
-XXX All changes to installed files in F<cpan/>, F<dist/>, F<ext/> and F<lib/>
-go here.  If Module::CoreList is updated, generate an initial draft of the
-following sections using F<Porting/corelist-perldelta.pl>.  A paragraph summary
-for important changes should then be added by hand.  In an ideal world,
-dual-life modules would have a F<Changes> file that could be cribbed.
-
-The list of new and updated modules is modified automatically as part of
-preparing a Perl release, so the only reason to manually add entries here is if
-you're summarising the important changes in the module update. (Also, if the
-manually-added details don't match the automatically-generated ones, the
-release manager will have to investigate the situation carefully.)
-
-[ Within each section, list entries as an =item entry ]
-
-=head2 New Modules and Pragmata
-
-=over 4
-
-=item *
-
-XXX Remove this section if not applicable.
-
-=back
 
 =head2 Updated Modules and Pragmata
 
@@ -148,9 +74,27 @@ XXX Remove this section if not applicable.
 
 =item *
 
-L<Net::Ping> has been upgraded from version 2.71 to 2.72.
+L<B> has been upgraded from version 1.77 to 1.78.
 
-If there was something important to note about this change, include that here.
+=item *
+
+L<B::Deparse> has been upgraded from version 1.51 to 1.52.
+
+=item *
+
+L<Compress::Raw::Bzip2> has been upgraded from version 2.090 to 2.093.
+
+=item *
+
+L<Compress::Raw::Zlib> has been upgraded from version 2.090 to 2.093.
+
+=item *
+
+L<CPAN> now points to version 2.27 instead of version 2.27-TRIAL2.
+
+=item *
+
+L<Devel::PPPort> has been upgraded from version 3.55 to 3.56.
 
 =item *
 
@@ -158,32 +102,69 @@ L<English> has been upgraded from version 1.10 to 1.11.
 
 =item *
 
-L<Test::Simple> has been upgraded from version 1.302169 to 1.302170.
-
-=back
-
-=head2 Removed Modules and Pragmata
-
-=over 4
+L<ExtUtils::MakeMaker> has been upgraded from version 7.38 to 7.42.
 
 =item *
 
-XXX
+L<feature> has been upgraded from version 1.56 to 1.57.
+
+=item *
+
+L<File::stat> has been upgraded from version 1.08 to 1.09.
+
+=item *
+
+L<Filter::Simple> has been upgraded from version 0.95 to 0.96.
+
+=item *
+
+L<FindBin> is now a dual-life module.
+
+=item *
+
+L<IO::Compress> has been upgraded from version 2.090 to 2.093.
+
+=item *
+
+L<Module::CoreList> has been upgraded from version 5.20191120 to 5.20191220.
+
+=item *
+
+L<Net::Ping> has been upgraded from version 2.71 to 2.72.
+
+=item *
+
+L<Opcode> has been upgraded from version 1.44 to 1.45.
+
+=item *
+
+L<Storable> has been upgraded from version 3.17 to 3.18.
+
+fix to disallow vstring magic strings over 2GB.
+
+=item *
+
+L<Test::Simple> has been upgraded from version 1.302169 to 1.302170.
+
+=item *
+
+L<Tie::Hash::NamedCapture> has been upgraded from version 0.11 to 0.13.
+
+=item *
+
+L<VMS::Stdio> has been upgraded from version 2.44 to 2.45.
+
+=item *
+
+L<warnings> has been upgraded from version 1.45 to 1.46.
+
+=item *
+
+L<XS::APItest> has been upgraded from version 1.04 to 1.05.
 
 =back
 
 =head1 Documentation
-
-XXX Changes to files in F<pod/> go here.  Consider grouping entries by
-file and be sure to link to the appropriate page, e.g. L<perlfunc>.
-
-=head2 New Documentation
-
-XXX Changes which create B<new> files in F<pod/> go here.
-
-=head3 L<XXX>
-
-XXX Description of the purpose of the new file here
 
 =head2 Changes to Existing Documentation
 
@@ -191,179 +172,161 @@ We have attempted to update the documentation to reflect the changes
 listed in this document.  If you find any we have missed, send email
 to L<perlbug@perl.org|mailto:perlbug@perl.org>.
 
-XXX Changes which significantly change existing files in F<pod/> go here.
-However, any changes to F<pod/perldiag.pod> should go in the L</Diagnostics>
-section.
-
 Additionally, the following selected changes have been made:
 
-=head3 L<XXX>
+=head3 L<perldebguts>
 
 =over 4
 
-=item *
+=item Simplify a couple regnode definitions
 
-XXX Description of the change here
+Update BOUND and NBOUND definitions.
+
+=item Add ANYOFHs regnode
+
+This node is like ANYOFHb, but is used when more than one leading byte
+is the same in all the matched code points.
+
+ANYOFHb is used to avoid having to convert from UTF-8 to code point for
+something that won't match.  It checks that the first byte in the UTF-8
+encoded target is the desired one, thus ruling out most of the possible
+code points.
 
 =back
 
-=head1 Diagnostics
-
-The following additions or changes have been made to diagnostic output,
-including warnings and fatal error messages.  For the complete list of
-diagnostic messages, see L<perldiag>.
-
-XXX New or changed warnings emitted by the core's C<C> code go here.  Also
-include any changes in L<perldiag> that reconcile it to the C<C> code.
-
-=head2 New Diagnostics
-
-XXX Newly added diagnostic messages go under here, separated into New Errors
-and New Warnings
-
-=head3 New Errors
+=head3 L<perldiag>
 
 =over 4
 
-=item *
+=item Add documentation for experimental 'isa' operator
 
-XXX L<message|perldiag/"message">
+(S experimental::isa) This warning is emitted if you use the (C<isa>)
+operator. This operator is currently experimental and its behaviour may
+change in future releases of Perl.
 
 =back
 
-=head3 New Warnings
+=head3 L<perlfunc>
 
 =over 4
 
-=item *
+=item caller
 
-XXX L<message|perldiag/"message">
+Like L<C<__FILE__>|/__FILE__> and L<C<__LINE__>|/__LINE__>, the filename and
+line number returned here may be altered by the mechanism described at
+L<perlsyn/"Plain Old Comments (Not!)">.
+
+=item __FILE__
+
+It can be altered by the mechanism described at
+L<perlsyn/"Plain Old Comments (Not!)">.
+
+=item __LINE__
+
+It can be altered by the mechanism described at
+L<perlsyn/"Plain Old Comments (Not!)">.
+
+=item return
+
+Mention that you cannot return from do BLOCK
 
 =back
 
-=head2 Changes to Existing Diagnostics
-
-XXX Changes (i.e. rewording) of diagnostic messages go here
+=head3 L<perlguts>
 
 =over 4
 
-=item *
+=item Update documentation for UTF8f
 
-XXX Describe change here
+=item Add missing '=for apidoc' lines
+
+=back
+
+=head3 L<perlhacktips>
+
+=over 4
+
+=item Perl strings are NOT the same as C strings
+
+=back
+
+=head3 L<perlop>
+
+=over 4
+
+=item 'isa' operator is experimental
+
+This is an experimental feature and is available from Perl 5.31.6 when enabled
+by C<use feature 'isa'>. It emits a warning in the C<experimental::isa>
+category.
+
+=back
+
+=head3 L<perlreref>
+
+=over 4
+
+=item Fix some typos.
+
+=back
+
+=head3 L<perlvar>
+
+=over 4
+
+=item Remove ${^FEATURE_BITS}.
 
 =back
 
 =head1 Utility Changes
 
-XXX Changes to installed programs such as F<perlbug> and F<xsubpp> go here.
-Most of these are built within the directory F<utils>.
-
-[ List utility changes as a =head2 entry for each utility and =item
-entries for each change
-Use L<XXX> with program names to get proper documentation linking. ]
-
-=head2 L<XXX>
+=head2 L<perlbug>
 
 =over 4
 
-=item *
-
-XXX
+=item Adjust bug tracker homepage url to point to GitHub.
 
 =back
 
 =head1 Configuration and Compilation
 
-XXX Changes to F<Configure>, F<installperl>, F<installman>, and analogous tools
-go here.  Any other changes to the Perl build process should be listed here.
-However, any platform-specific changes should be listed in the
-L</Platform Support> section, instead.
-
-[ List changes as an =item entry ].
+=head2 F<Configure>
 
 =over 4
 
-=item *
+=item Check if the compiler can handle inline attribute.
 
-XXX
+=item Check for character data alignment.
 
 =back
 
 =head1 Testing
 
-XXX Any significant changes to the testing of a freshly built perl should be
-listed here.  Changes which create B<new> files in F<t/> go here as do any
-large changes to the testing harness (e.g. when parallel testing was added).
-Changes to existing files in F<t/> aren't worth summarizing, although the bugs
-that they represent may be covered elsewhere.
-
-XXX If there were no significant test changes, say this:
-
-Tests were added and changed to reflect the other additions and changes
-in this release.
-
-XXX If instead there were significant changes, say this:
-
 Tests were added and changed to reflect the other additions and
 changes in this release.  Furthermore, these significant changes were
 made:
 
-[ List each test improvement as an =item entry ]
-
 =over 4
 
-=item *
+=item t/charset_tools.pl
 
-XXX
+Avoid some work on ASCII platforms
+
+=item t/re/regexp.t
+
+Speed up many regex tests on ASCII platform
+
+=item t/re/pat.t
+
+Skip tests that don't work on EBCDIC
 
 =back
 
 =head1 Platform Support
 
-XXX Any changes to platform support should be listed in the sections below.
-
-[ Within the sections, list each platform as an =item entry with specific
-changes as paragraphs below it. ]
-
-=head2 New Platforms
-
-XXX List any platforms that this version of perl compiles on, that previous
-versions did not.  These will either be enabled by new files in the F<hints/>
-directories, or new subdirectories and F<README> files at the top level of the
-source tree.
-
-=over 4
-
-=item XXX-some-platform
-
-XXX
-
-=back
-
-=head2 Discontinued Platforms
-
-XXX List any platforms that this version of perl no longer compiles on.
-
-=over 4
-
-=item XXX-some-platform
-
-XXX
-
-=back
-
 =head2 Platform-Specific Notes
 
-XXX List any changes for specific platforms.  This could include configuration
-and compilation changes or changes in portability/compatibility.  However,
-changes within modules for platforms should generally be listed in the
-L</Modules and Pragmata> section.
-
 =over 4
-
-=item XXX-some-platform
-
-XXX
 
 =item Solaris
 
@@ -372,77 +335,60 @@ compiler, which are found under C</opt/developerstudio*>.
 
 =back
 
-=head1 Internal Changes
-
-XXX Changes which affect the interface available to C<XS> code go here.  Other
-significant internal changes for future core maintainers should be noted as
-well.
-
-[ List each change as an =item entry ]
-
-=over 4
-
-=item *
-
-XXX
-
-=back
-
 =head1 Selected Bug Fixes
 
-XXX Important bug fixes in the core language are summarized here.  Bug fixes in
-files in F<ext/> and F<lib/> are best summarized in L</Modules and Pragmata>.
-
-[ List each fix as an =item entry ]
-
 =over 4
 
-=item *
+=item Fix MYMALLOC (PERL_MALLOC) build on Windows
 
-Updates to C<cop_features> are now handled by magic on C<%^H> rather
-than by F<feature.pm> updating C<${^FEATURE_BITS}>, which has been
-removed.  This allows perl code to save and restore the contents of
-C<%^H> without also having to manage C<${^FEATURE_BITS}>.  [#17337]
+=item \p{user-defined} overrides official Unicode [L<GH #17025|https://github.com/Perl/perl5/issues/17025>]
 
-=back
+Prior to this patch, they only sometimes overrode.
 
-=head1 Known Problems
+=item Regular Expressions
 
-XXX Descriptions of platform agnostic bugs we know we can't fix go here.  Any
-tests that had to be C<TODO>ed for the release would be noted here.  Unfixed
-platform specific bugs also go here.
+Properly handle filled /il regnodes and multi-char folds
 
-[ List each fix as an =item entry ]
+=item Compilation error during make minitest [L<GH #17293|https://github.com/Perl/perl5/issues/17293>]
 
-=over 4
+move the implementation of %-, %+ into core
 
-=item *
+=item read beyond buffer in grok_inf_nan [L<GH #17370|https://github.com/Perl/perl5/issues/17370>]
 
-XXX
+=item Workaround glibc bug with LC_MESSAGES [L<GH #17081|https://github.com/Perl/perl5/issues/17081>]
 
 =back
-
-=head1 Errata From Previous Releases
-
-=over 4
-
-=item *
-
-XXX Add anything here that we forgot to add, or were mistaken about, in
-the perldelta of a previous release.
-
-=back
-
-=head1 Obituary
-
-XXX If any significant core contributor or member of the CPAN community has
-died, add a short obituary here.
 
 =head1 Acknowledgements
 
-XXX Generate this with:
+Perl 5.31.7 represents approximately 4 weeks of development since Perl
+5.31.6 and contains approximately 9,300 lines of changes across 450 files
+from 22 authors.
 
-  perl Porting/acknowledgements.pl v5.31.6..HEAD
+Excluding auto-generated files, documentation and release tools, there were
+approximately 5,200 lines of changes to 280 .pm, .t, .c and .h files.
+
+Perl continues to flourish into its fourth decade thanks to a vibrant
+community of users and developers. The following people are known to have
+contributed the improvements that became Perl 5.31.7:
+
+Ask Bjørn Hansen, brian d foy, Bryan Stenson, Chad Granum, Chris 'BinGOs'
+Williams, Dan Book, David Mitchell, Felipe Gasper, James E Keenan, Karl
+Williamson, Matthew Horsfall, Max Maischein, Nicolas R., Pali, Paul Evans,
+Ricardo Signes, Sawyer X, Stefan Seifert, Steve Hay, Tomasz Konojacki, Tony
+Cook, Vitali Peil.
+
+The list above is almost certainly incomplete as it is automatically
+generated from version control history. In particular, it does not include
+the names of the (very much appreciated) contributors who reported issues to
+the Perl bug tracker.
+
+Many of the changes included in this version originated in the CPAN modules
+included in Perl's core. We're grateful to the entire CPAN community for
+helping Perl to flourish.
+
+For a more complete list of all of Perl's historical contributors, please
+see the F<AUTHORS> file in the Perl source distribution.
 
 =head1 Reporting Bugs
 
