Adjust Porting/release_managers_guide.pod for perlivp
(cherry picked from commit bcfd41510f30f7f48decf35e665b79c23fecc991)

--- a/Porting/release_managers_guide.pod
+++ b/Porting/release_managers_guide.pod
@@ -1039,9 +1039,9 @@ which is why you should test from the tarball.
 
 =head4 Run the Installation Verification Procedure utility
 
-    $ ./perl -Ilib ./perlivp
+    $ ./perl -Ilib ./utils/perlivp
     # Or, perhaps:
-    $ ./perl5.x.y ./perlivp5.x.y
+    $ ./perl5.x.y ./utils/perlivp5.x.y
     ...
     All tests successful.
     $
